# iditm3d

./: CMakeLists.txt  iditm3d.sh  iditm3d_mem.sh  nohup.out  nohupiditm3d.sh
iditmpy/: alt_profile.py  class_plot.py  day_number.py  def_classes.py  divB.py  efield.py  ele_velocity.py  fast_wave_speed.py  iditm.py  init_dir.cfg  lati_height_cont.py  latitude_profile.py  long_lat_cont.py  long_profile.py  parameters.py  read_data.py  subsolar_colat_lon.py
iditmpy/diagpy/: alt_profile.py  class_plot.py  def_classes.py  diag.py  efield.py  ele_velocity.py  fast_wave_speed.py  grad.py  init_dir.cfg  lati_height_cont.py  latitude_profile.py  long_lat_cont.py  long_profile.py  read_data.py  shapiro.py
iditmpy/vel_field/: vel_field.py
src/: array_alloc_dealloc.cpp  boundary.cpp  boundary.h  check_positivity.cpp  check_positivity.h  collision_freq.h  const_normalize.cpp  dipole_magnetic.cpp  ele_cooling_rate.h  electric_field.h  euvflux_nt.cpp  euvflux_seq.cpp  fluxes.h  formfunctions.cpp  forward_scheme.cpp  funcdef.h  functions.h  grids.cpp  iditm3d.cpp  imex_leap_frog.cpp  implicit_solver.h  initialize.cpp  input_iri_msis.cpp  input_output_param.cpp  input_output_solution.cpp  jacobian.cpp  max_mhd_speeds.h  neu_cooling_rate.cpp  neu_cooling_rate.h  operators.h  param.h  param_def.h  parameters.cpp  phdf5readwrite.cpp  prod_loss_rates.cpp  reconstruction.h  rhs_functions.cpp  rhs_stiff_functions.cpp  smooth_multi_dim.cpp  solar_zenith_angle.cpp  (+5 more)
